<?xml version="1.0"?>
<package format="2">
  <name>mushr_hardware</name>
  <version>0.0.0</version>
  <description>The mushr_hardware package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="schmittle@todo.todo">schmittle</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>ydlidar</exec_depend>
  <exec_depend>push_button_utils</exec_depend>

</package>
